--- a/compose.yaml
+++ b/compose.yaml
@@ -1,9 +1,36 @@
+volumes:
+  mongodb_data:
+
 services:
   mongodb:
     image: 'mongo:latest'
+    container_name: 'price-comparator-mongo'
     environment:
-      - 'MONGO_INITDB_DATABASE=mydatabase'
-      - 'MONGO_INITDB_ROOT_PASSWORD=secret'
-      - 'MONGO_INITDB_ROOT_USERNAME=root'
+      - 'MONGO_INITDB_DATABASE=price-comparator'
+      - 'MONGO_INITDB_ROOT_PASSWORD=${MONGO_INITDB_ROOT_PASSWORD}'
+      - 'MONGO_INITDB_ROOT_USERNAME=${MONGO_INITDB_ROOT_USERNAME}'
     ports:
-      - '27017'
+      - "27018:27017"
+    volumes:
+        - mongodb_data:/data/db
+    healthcheck:
+      test: ["CMD", "mongo", "--eval", "db.adminCommand('ping')"]
+    networks:
+      - pcn
+
+#  backend:
+#    build:
+#        context: .
+#        dockerfile: Dockerfile
+#    env_file: ".env"
+#    container_name: 'price-comparator-backend'
+#    ports:
+#      - "8080:8080"
+#    healthcheck:
+#      test: ["CMD", "curl", "-f", "http://localhost:8080/health"]
+#    depends_on:
+#      - mongodb
+
+networks:
+  pcn:
+    driver: bridge
